force-app/main/default/objects/Product2/fields/ADA_Option__c.field-meta.xml
<CustomField>
    <fullName>ADA_Option__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ADA Option</label>
    <type>Checkbox</type>
</CustomField>