force-app/main/default/objects/Product2/fields/Captains_Lounge_Middle_Seat__c.field-meta.xml
<CustomField>
    <fullName>Captains_Lounge_Middle_Seat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Captains Lounge Middle Seat</label>
    <type>Checkbox</type>
</CustomField>