force-app/main/default/objects/Product2/fields/CaseQtyGS1__c.field-meta.xml
<CustomField>
    <fullName>CaseQtyGS1__c</fullName>
    <label>CaseQtyGS1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>