force-app/main/default/objects/Product2/fields/Chassis_Type__c.field-meta.xml
<CustomField>
    <fullName>Chassis_Type__c</fullName>
    <label>Chassis Type</label>
    <type>TextArea</type>
</CustomField>