force-app/main/default/objects/Product2/fields/CommercialBid__c.field-meta.xml
<CustomField>
    <fullName>CommercialBid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CommercialBid</label>
    <type>Checkbox</type>
</CustomField>