force-app/main/default/objects/Product2/fields/Confirmation_Installed__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Installed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirmation Installed</label>
    <type>Checkbox</type>
</CustomField>