force-app/main/default/objects/Product2/fields/Conversion_Option_Category__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Option_Category__c</fullName>
    <label>Conversion Option Category</label>
    <length>50</length>
    <type>Text</type>
</CustomField>