force-app/main/default/objects/Product2/fields/Conversion_Type__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Type__c</fullName>
    <label>Conversion Type</label>
    <type>TextArea</type>
</CustomField>