force-app/main/default/objects/Product2/fields/Converson_Option_SubCategory__c.field-meta.xml
<CustomField>
    <fullName>Converson_Option_SubCategory__c</fullName>
    <label>Converson Option SubCategory</label>
    <length>50</length>
    <type>Text</type>
</CustomField>