force-app/main/default/objects/Product2/fields/DVD__c.field-meta.xml
<CustomField>
    <fullName>DVD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DVD</label>
    <type>Checkbox</type>
</CustomField>