force-app/main/default/objects/Product2/fields/Exterior_Color__c.field-meta.xml
<CustomField>
    <fullName>Exterior_Color__c</fullName>
    <label>Exterior Color</label>
    <length>50</length>
    <type>Text</type>
</CustomField>