force-app/main/default/objects/Product2/fields/Flooring__c.field-meta.xml
<CustomField>
    <fullName>Flooring__c</fullName>
    <label>Flooring</label>
    <length>20</length>
    <type>Text</type>
</CustomField>