force-app/main/default/objects/Product2/fields/Incomplete__c.field-meta.xml
<CustomField>
    <fullName>Incomplete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Incomplete</label>
    <type>Checkbox</type>
</CustomField>