force-app/main/default/objects/Product2/fields/Interior_Color__c.field-meta.xml
<CustomField>
    <fullName>Interior_Color__c</fullName>
    <label>Interior Color</label>
    <length>50</length>
    <type>Text</type>
</CustomField>