force-app/main/default/objects/Product2/fields/Is_Used_Chassis__c.field-meta.xml
<CustomField>
    <fullName>Is_Used_Chassis__c</fullName>
    <formula>OR(
  Chassis_Type__c = &apos;Afford Preowned&apos;,
  Chassis_Type__c = &apos;Certified Pre-Owned&apos;,
  Chassis_Type__c = &apos;Pre Owned&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Used Chassis</label>
    <type>Checkbox</type>
</CustomField>