force-app/main/default/objects/Product2/fields/JIT_JIS_Lineside__c.field-meta.xml
<CustomField>
    <fullName>JIT_JIS_Lineside__c</fullName>
    <defaultValue>false</defaultValue>
    <label>JIT / JIS Lineside</label>
    <type>Checkbox</type>
</CustomField>