force-app/main/default/objects/Product2/fields/Large_Portal_Pics__c.field-meta.xml
<CustomField>
    <fullName>Large_Portal_Pics__c</fullName>
    <label>Large Portal Pics</label>
    <length>200</length>
    <type>Text</type>
</CustomField>