force-app/main/default/objects/Product2/fields/Load_Leveling__c.field-meta.xml
<CustomField>
    <fullName>Load_Leveling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Load Leveling</label>
    <type>Checkbox</type>
</CustomField>