force-app/main/default/objects/Product2/fields/Man_Door_Power_Window__c.field-meta.xml
<CustomField>
    <fullName>Man_Door_Power_Window__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Man Door Power Window</label>
    <type>Checkbox</type>
</CustomField>