force-app/main/default/objects/Product2/fields/Medium_Portal_Pics__c.field-meta.xml
<CustomField>
    <fullName>Medium_Portal_Pics__c</fullName>
    <label>Medium Portal Pics</label>
    <length>200</length>
    <type>Text</type>
</CustomField>