force-app/main/default/objects/Product2/fields/Moon_Roof__c.field-meta.xml
<CustomField>
    <fullName>Moon_Roof__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Moon Roof</label>
    <type>Checkbox</type>
</CustomField>