force-app/main/default/objects/Product2/fields/MSRP__c.field-meta.xml
<CustomField>
    <fullName>MSRP__c</fullName>
    <label>MSRP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>