force-app/main/default/objects/Product2/fields/Neg_Inv_Comments__c.field-meta.xml
<CustomField>
    <fullName>Neg_Inv_Comments__c</fullName>
    <label>Neg Inv Comments</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>