force-app/main/default/objects/Product2/fields/Not_Configurable__c.field-meta.xml
<CustomField>
    <fullName>Not_Configurable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Configurable</label>
    <type>Checkbox</type>
</CustomField>