force-app/main/default/objects/Product2/fields/Option_package__c.field-meta.xml
<CustomField>
    <fullName>Option_package__c</fullName>
    <label>Option package</label>
    <length>50</length>
    <type>Text</type>
</CustomField>