force-app/main/default/objects/Product2/fields/Part_Outsource_process_complete__c.field-meta.xml
<CustomField>
    <fullName>Part_Outsource_process_complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Part Outsource process complete</label>
    <type>Checkbox</type>
</CustomField>