force-app/main/default/objects/Product2/fields/Part_to_be_outsourced__c.field-meta.xml
<CustomField>
    <fullName>Part_to_be_outsourced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Part to be outsourced</label>
    <type>Checkbox</type>
</CustomField>