force-app/main/default/objects/Product2/fields/PartLength__c.field-meta.xml
<CustomField>
    <fullName>PartLength__c</fullName>
    <label>Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>