force-app/main/default/objects/Product2/fields/Patent_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Patent_Numbers__c</fullName>
    <label>Patent Numbers</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>