force-app/main/default/objects/Product2/fields/PDR_Reference__c.field-meta.xml
<CustomField>
    <fullName>PDR_Reference__c</fullName>
    <label>PDR Reference</label>
    <length>25</length>
    <type>Text</type>
</CustomField>