force-app/main/default/objects/Product2/fields/Photo_Managed_Content_ID__c.field-meta.xml
<CustomField>
    <fullName>Photo_Managed_Content_ID__c</fullName>
    <label>Photo Managed Content ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>