force-app/main/default/objects/Product2/fields/Portal_Category__c.field-meta.xml
<CustomField>
    <fullName>Portal_Category__c</fullName>
    <label>Portal Category</label>
    <length>100</length>
    <type>Text</type>
</CustomField>