force-app/main/default/objects/Product2/fields/Powder_Coat_hanger_type__c.field-meta.xml
<CustomField>
    <fullName>Powder_Coat_hanger_type__c</fullName>
    <label>Powder Coat hanger type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>