force-app/main/default/objects/Product2/fields/PPAP_Inspection_Required__c.field-meta.xml
<CustomField>
    <fullName>PPAP_Inspection_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PPAP Inspection Required</label>
    <type>Checkbox</type>
</CustomField>