force-app/main/default/objects/Product2/fields/QR_Code_Data__c.field-meta.xml
<CustomField>
    <fullName>QR_Code_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QR Code Data</label>
    <type>Checkbox</type>
</CustomField>