force-app/main/default/objects/Product2/fields/Replacement_Parts__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Parts__c</fullName>
    <label>Replacement Parts</label>
    <length>30</length>
    <type>Text</type>
</CustomField>