force-app/main/default/objects/Product2/fields/Restriction_Groups_for_Webportal__c.field-meta.xml
<CustomField>
    <fullName>Restriction_Groups_for_Webportal__c</fullName>
    <label>Restriction Groups for Webportal</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>