force-app/main/default/objects/Product2/fields/RU_Side_Entry__c.field-meta.xml
<CustomField>
    <fullName>RU_Side_Entry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RU Side Entry</label>
    <type>Checkbox</type>
</CustomField>