force-app/main/default/objects/Product2/fields/S_Package__c.field-meta.xml
<CustomField>
    <fullName>S_Package__c</fullName>
    <defaultValue>false</defaultValue>
    <label>S Package</label>
    <type>Checkbox</type>
</CustomField>