force-app/main/default/objects/Product2/fields/Seat_Color__c.field-meta.xml
<CustomField>
    <fullName>Seat_Color__c</fullName>
    <label>Seat Color</label>
    <length>20</length>
    <type>Text</type>
</CustomField>