force-app/main/default/objects/Product2/fields/Seat_Type__c.field-meta.xml
<CustomField>
    <fullName>Seat_Type__c</fullName>
    <label>Seat Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>