force-app/main/default/objects/Product2/fields/Service_Active_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Service_Active_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service Active Checkbox</label>
    <type>Checkbox</type>
</CustomField>