force-app/main/default/objects/Product2/fields/Service_Part_Creation__c.field-meta.xml
<CustomField>
    <fullName>Service_Part_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service Part Creation</label>
    <type>Checkbox</type>
</CustomField>