force-app/main/default/objects/Product2/fields/SF_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>SF_Product_ID__c</fullName>
    <label>SF Product ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>