force-app/main/default/objects/Product2/fields/Show_On_Traveler__c.field-meta.xml
<CustomField>
    <fullName>Show_On_Traveler__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show On Traveler</label>
    <type>Checkbox</type>
</CustomField>