force-app/main/default/objects/Product2/fields/Side_Entry__c.field-meta.xml
<CustomField>
    <fullName>Side_Entry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Side Entry</label>
    <type>Checkbox</type>
</CustomField>