force-app/main/default/objects/Product2/fields/Small_Portal_Pics__c.field-meta.xml
<CustomField>
    <fullName>Small_Portal_Pics__c</fullName>
    <label>Small Portal Pics</label>
    <length>200</length>
    <type>Text</type>
</CustomField>