force-app/main/default/objects/Product2/fields/Specifications_c__c.field-meta.xml
<CustomField>
    <fullName>Specifications_c__c</fullName>
    <label>Specifications</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>