force-app/main/default/objects/Product2/fields/SubAssembly_JIT__c.field-meta.xml
<CustomField>
    <fullName>SubAssembly_JIT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SubAssembly JIT</label>
    <type>Checkbox</type>
</CustomField>