force-app/main/default/objects/Product2/fields/Super_Console__c.field-meta.xml
<CustomField>
    <fullName>Super_Console__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Super Console</label>
    <type>Checkbox</type>
</CustomField>