force-app/main/default/objects/Product2/fields/Time_Study_Priority__c.field-meta.xml
<CustomField>
    <fullName>Time_Study_Priority__c</fullName>
    <label>Time Study Priority</label>
    <length>10</length>
    <type>Text</type>
</CustomField>