force-app/main/default/objects/Product2/fields/Trailer_Tow__c.field-meta.xml
<CustomField>
    <fullName>Trailer_Tow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trailer Tow</label>
    <type>Checkbox</type>
</CustomField>