force-app/main/default/objects/Product2/fields/Trim_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Trim_Identifier__c</fullName>
    <label>Trim Identifier</label>
    <length>50</length>
    <type>Text</type>
</CustomField>