force-app/main/default/objects/Product2/fields/Trim_Level__c.field-meta.xml
<CustomField>
    <fullName>Trim_Level__c</fullName>
    <label>Trim Level</label>
    <length>50</length>
    <type>Text</type>
</CustomField>