force-app/main/default/objects/Product2/fields/Unit_Net_Weight__c.field-meta.xml
<CustomField>
    <fullName>Unit_Net_Weight__c</fullName>
    <label>Unit Net Weight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>