force-app/main/default/objects/Product2/fields/Vacuum__c.field-meta.xml
<CustomField>
    <fullName>Vacuum__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vacuum</label>
    <type>Checkbox</type>
</CustomField>