force-app/main/default/objects/Product2/fields/Vehicle_Airbag_Option__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Airbag_Option__c</fullName>
    <label>Vehicle Airbag Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Vehicle_Airbag_Option</valueSetName>
    </valueSet>
</CustomField>