force-app/main/default/objects/Product2/fields/Vehicle_Door_Height__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Door_Height__c</fullName>
    <label>Vehicle Door Height</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Vehicle_Door_Height</valueSetName>
    </valueSet>
</CustomField>