force-app/main/default/objects/Product2/fields/Vehicle_Door_Width__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Door_Width__c</fullName>
    <label>Vehicle Door Width</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Vehicle_Door_Width</valueSetName>
    </valueSet>
</CustomField>