force-app/main/default/objects/Product2/fields/Vehicle_Lenght__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Lenght__c</fullName>
    <label>Vehicle Lenght</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Vehicle_Length</valueSetName>
    </valueSet>
</CustomField>