force-app/main/default/objects/Product2/fields/Vehicle_Length__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Length__c</fullName>
    <label>Vehicle Length</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Vehicle_Length</valueSetName>
    </valueSet>
</CustomField>