force-app/main/default/objects/Product2/fields/Vehicle_Lift__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Lift__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle Lift</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>