force-app/main/default/objects/Product2/fields/Vehicle_Lift_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Lift_Capacity__c</fullName>
    <label>Vehicle Lift Capacity</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Vehicle_Lift_Capacity</valueSetName>
    </valueSet>
</CustomField>