force-app/main/default/objects/Product2/fields/Warranty_Service_Date__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Service_Date__c</fullName>
    <label>Warranty Service Date</label>
    <type>DateTime</type>
</CustomField>