force-app/main/default/objects/Product2/fields/X360_Camera__c.field-meta.xml
<CustomField>
    <fullName>X360_Camera__c</fullName>
    <defaultValue>false</defaultValue>
    <label>360 Camera</label>
    <type>Checkbox</type>
</CustomField>